FIXED: Bracket alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3969,3 +3969,12 @@
 			height: 1.5em;
 			background-color: #1d242a;
 		}
+
+		/* bracket */
+		#bracket {
+
+		}
+
+		.label {
+			text-align: center;
+		}
